// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogBoxInspectorMessageHeader should not render collapse button for short content 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(51, 51, 51, 1)",
      "elevation": 2,
      "flex": 0,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.5,
      "shadowRadius": 2,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 5,
        "marginTop": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "flex": 1,
            "fontSize": 20,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 28,
          },
          Object {
            "color": "rgba(250, 186, 48, 1)",
          },
        ]
      }
    >
      Warning
    </Text>
  </View>
  <Text
    numberOfLines={null}
    style={
      Object {
        "color": "rgba(255, 255, 255, 1)",
        "fontSize": 14,
        "fontWeight": "500",
        "includeFontPadding": false,
        "lineHeight": 20,
        "paddingBottom": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <LogBoxMessage
      message={
        Object {
          "content": "Short",
          "substitutions": Array [],
        }
      }
      style={
        Object {
          "color": "rgba(255, 255, 255, 0.6)",
        }
      }
    />
  </Text>
</View>
`;

exports[`LogBoxInspectorMessageHeader should render "collapse" if expanded 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(51, 51, 51, 1)",
      "elevation": 2,
      "flex": 0,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.5,
      "shadowRadius": 2,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 5,
        "marginTop": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "flex": 1,
            "fontSize": 20,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 28,
          },
          Object {
            "color": "rgba(250, 186, 48, 1)",
          },
        ]
      }
    >
      Warning
    </Text>
    <LogBoxButton
      backgroundColor={
        Object {
          "default": "transparent",
          "pressed": "rgba(69, 69, 69, 1)",
        }
      }
      onPress={[Function]}
      style={
        Object {
          "borderRadius": 3,
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "rgba(255, 255, 255, 0.7)",
            "fontSize": 12,
            "fontWeight": "300",
            "lineHeight": 12,
          }
        }
      >
        collapse
      </Text>
    </LogBoxButton>
  </View>
  <Text
    numberOfLines={null}
    style={
      Object {
        "color": "rgba(255, 255, 255, 1)",
        "fontSize": 14,
        "fontWeight": "500",
        "includeFontPadding": false,
        "lineHeight": 20,
        "paddingBottom": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <LogBoxMessage
      message={
        Object {
          "content": "########################################################################################################################################################################################################",
          "substitutions": Array [],
        }
      }
      style={
        Object {
          "color": "rgba(255, 255, 255, 0.6)",
        }
      }
    />
  </Text>
</View>
`;

exports[`LogBoxInspectorMessageHeader should render "see more" if collapsed 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(51, 51, 51, 1)",
      "elevation": 2,
      "flex": 0,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.5,
      "shadowRadius": 2,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 5,
        "marginTop": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "flex": 1,
            "fontSize": 20,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 28,
          },
          Object {
            "color": "rgba(250, 186, 48, 1)",
          },
        ]
      }
    >
      Warning
    </Text>
    <LogBoxButton
      backgroundColor={
        Object {
          "default": "transparent",
          "pressed": "rgba(69, 69, 69, 1)",
        }
      }
      onPress={[Function]}
      style={
        Object {
          "borderRadius": 3,
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "rgba(255, 255, 255, 0.7)",
            "fontSize": 12,
            "fontWeight": "300",
            "lineHeight": 12,
          }
        }
      >
        see more
      </Text>
    </LogBoxButton>
  </View>
  <Text
    numberOfLines={5}
    style={
      Object {
        "color": "rgba(255, 255, 255, 1)",
        "fontSize": 14,
        "fontWeight": "500",
        "includeFontPadding": false,
        "lineHeight": 20,
        "paddingBottom": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <LogBoxMessage
      message={
        Object {
          "content": "########################################################################################################################################################################################################",
          "substitutions": Array [],
        }
      }
      style={
        Object {
          "color": "rgba(255, 255, 255, 0.6)",
        }
      }
    />
  </Text>
</View>
`;

exports[`LogBoxInspectorMessageHeader should render error 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(51, 51, 51, 1)",
      "elevation": 2,
      "flex": 0,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.5,
      "shadowRadius": 2,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 5,
        "marginTop": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "flex": 1,
            "fontSize": 20,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 28,
          },
          Object {
            "color": "rgba(243, 83, 105, 1)",
          },
        ]
      }
    >
      Error
    </Text>
  </View>
  <Text
    numberOfLines={null}
    style={
      Object {
        "color": "rgba(255, 255, 255, 1)",
        "fontSize": 14,
        "fontWeight": "500",
        "includeFontPadding": false,
        "lineHeight": 20,
        "paddingBottom": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <LogBoxMessage
      message={
        Object {
          "content": "Some error message",
          "substitutions": Array [],
        }
      }
      style={
        Object {
          "color": "rgba(255, 255, 255, 0.6)",
        }
      }
    />
  </Text>
</View>
`;

exports[`LogBoxInspectorMessageHeader should render fatal 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(51, 51, 51, 1)",
      "elevation": 2,
      "flex": 0,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.5,
      "shadowRadius": 2,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 5,
        "marginTop": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "flex": 1,
            "fontSize": 20,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 28,
          },
          Object {
            "color": "rgba(243, 83, 105, 1)",
          },
        ]
      }
    >
      Fatal Error
    </Text>
  </View>
  <Text
    numberOfLines={null}
    style={
      Object {
        "color": "rgba(255, 255, 255, 1)",
        "fontSize": 14,
        "fontWeight": "500",
        "includeFontPadding": false,
        "lineHeight": 20,
        "paddingBottom": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <LogBoxMessage
      message={
        Object {
          "content": "Some fatal message",
          "substitutions": Array [],
        }
      }
      style={
        Object {
          "color": "rgba(255, 255, 255, 0.6)",
        }
      }
    />
  </Text>
</View>
`;

exports[`LogBoxInspectorMessageHeader should render syntax error 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(51, 51, 51, 1)",
      "elevation": 2,
      "flex": 0,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.5,
      "shadowRadius": 2,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 5,
        "marginTop": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "flex": 1,
            "fontSize": 20,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 28,
          },
          Object {
            "color": "rgba(243, 83, 105, 1)",
          },
        ]
      }
    >
      Syntax Error
    </Text>
  </View>
  <Text
    numberOfLines={null}
    style={
      Object {
        "color": "rgba(255, 255, 255, 1)",
        "fontSize": 14,
        "fontWeight": "500",
        "includeFontPadding": false,
        "lineHeight": 20,
        "paddingBottom": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <LogBoxMessage
      message={
        Object {
          "content": "Some syntax error message",
          "substitutions": Array [],
        }
      }
      style={
        Object {
          "color": "rgba(255, 255, 255, 0.6)",
        }
      }
    />
  </Text>
</View>
`;
